 {
  "version": 4,
  "terraform_version": "1.15.5",
  "serial": 11,
  "lineage": "88c8e1e2-0f24-38b1-8d73-f0445aaa444d",
  "resources": [
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "k8s_master",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "force_attach": false,
                "guest_os_features": [
                  "VIRTIO_SCSI_MULTIQUEUE",
                  "SEV_CAPABLE",
                  "SEV_SNP_CAPABLE",
                  "SEV_LIVE_MIGRATABLE",
                  "SEV_LIVE_MIGRATABLE_V2",
                  "IDPF",
                  "TDX_CAPABLE",
                  "UEFI_COMPATIBLE",
                  "GVNIC"
                ],
                "initialize_params": [
                  {
                    "architecture": "X86_64",
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2204-jammy-v20260530",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/kkgcplabs01-001/zones/us-central1-a/disks/master-node-machine"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "AMD Rome",
            "creation_timestamp": "2026-06-06T04:49:16.320-07:00",
            "current_status": "RUNNING",
            "deletion_policy": "DELETE",
            "deletion_protection": false,
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "enable_display": false,
            "id": "projects/kkgcplabs01-001/zones/us-central1-a/instances/master-node-machine",
            "instance_id": "7133264520688547795",
            "label_fingerprint": "vezUS-42LLM=",
            "machine_type": "e2-medium",
            "metadata_fingerprint": "WmcHc28bjAA=",
            "name": "master-node-machine",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.225.11.39",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/kkgcplabs01-001/global/networks/library-vpc",
                "network_ip": "10.0.1.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/kkgcplabs01-001/regions/us-central1/subnetworks/library-vpc-subnet",
                "subnetwork_project": "kkgcplabs01-001",
                "vlan": 0
              }
            ],
            "project": "kkgcplabs01-001",
            "scheduling": [
              {
                "automatic_restart": true,
                "availability_domain": 0,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/kkgcplabs01-001/zones/us-central1-a/instances/master-node-machine",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "zone": "us-central1-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ],
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_rsa"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.google_compute_network.vpc_network",
            "module.network.google_compute_subnetwork.subnet"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "k8s_worker",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "force_attach": false,
                "guest_os_features": [
                  "VIRTIO_SCSI_MULTIQUEUE",
                  "SEV_CAPABLE",
                  "SEV_SNP_CAPABLE",
                  "SEV_LIVE_MIGRATABLE",
                  "SEV_LIVE_MIGRATABLE_V2",
                  "IDPF",
                  "TDX_CAPABLE",
                  "UEFI_COMPATIBLE",
                  "GVNIC"
                ],
                "initialize_params": [
                  {
                    "architecture": "X86_64",
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2204-jammy-v20260530",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/kkgcplabs01-001/zones/us-central1-a/disks/worker-node-machine"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "AMD Rome",
            "creation_timestamp": "2026-06-06T04:49:17.058-07:00",
            "current_status": "RUNNING",
            "deletion_policy": "DELETE",
            "deletion_protection": false,
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "enable_display": false,
            "id": "projects/kkgcplabs01-001/zones/us-central1-a/instances/worker-node-machine",
            "instance_id": "9188889023069403091",
            "label_fingerprint": "vezUS-42LLM=",
            "machine_type": "e2-medium",
            "metadata_fingerprint": "WmcHc28bjAA=",
            "name": "worker-node-machine",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.42.32.248",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/kkgcplabs01-001/global/networks/library-vpc",
                "network_ip": "10.0.1.4",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/kkgcplabs01-001/regions/us-central1/subnetworks/library-vpc-subnet",
                "subnetwork_project": "kkgcplabs01-001",
                "vlan": 0
              }
            ],
            "project": "kkgcplabs01-001",
            "scheduling": [
              {
                "automatic_restart": true,
                "availability_domain": 0,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/kkgcplabs01-001/zones/us-central1-a/instances/worker-node-machine",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "zone": "us-central1-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ],
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_rsa"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.google_compute_network.vpc_network",
            "module.network.google_compute_subnetwork.subnet"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "sonarqube",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "force_attach": false,
                "guest_os_features": [
                  "VIRTIO_SCSI_MULTIQUEUE",
                  "SEV_CAPABLE",
                  "SEV_SNP_CAPABLE",
                  "SEV_LIVE_MIGRATABLE",
                  "SEV_LIVE_MIGRATABLE_V2",
                  "IDPF",
                  "TDX_CAPABLE",
                  "UEFI_COMPATIBLE",
                  "GVNIC"
                ],
                "initialize_params": [
                  {
                    "architecture": "X86_64",
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2204-jammy-v20260530",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 30,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/kkgcplabs01-001/zones/us-central1-a/disks/sonarqube-server"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "AMD Rome",
            "creation_timestamp": "2026-06-06T04:49:16.981-07:00",
            "current_status": "RUNNING",
            "deletion_policy": "DELETE",
            "deletion_protection": false,
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "enable_display": false,
            "id": "projects/kkgcplabs01-001/zones/us-central1-a/instances/sonarqube-server",
            "instance_id": "5463358846339233747",
            "label_fingerprint": "vezUS-42LLM=",
            "machine_type": "e2-medium",
            "metadata_fingerprint": "WmcHc28bjAA=",
            "name": "sonarqube-server",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.56.53.100",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/kkgcplabs01-001/global/networks/library-vpc",
                "network_ip": "10.0.1.3",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/kkgcplabs01-001/regions/us-central1/subnetworks/library-vpc-subnet",
                "subnetwork_project": "kkgcplabs01-001",
                "vlan": 0
              }
            ],
            "project": "kkgcplabs01-001",
            "scheduling": [
              {
                "automatic_restart": true,
                "availability_domain": 0,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/kkgcplabs01-001/zones/us-central1-a/instances/sonarqube-server",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "zone": "us-central1-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ],
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_rsa"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.google_compute_network.vpc_network",
            "module.network.google_compute_subnetwork.subnet"
          ]
        }
      ]
    },
    {
      "module": "module.firewall",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "udp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2026-06-06T04:49:02.470-07:00",
            "deletion_policy": "DELETE",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/kkgcplabs01-001/global/firewalls/library-vpc-allow-internal-all",
            "log_config": [],
            "name": "library-vpc-allow-internal-all",
            "network": "https://www.googleapis.com/compute/v1/projects/kkgcplabs01-001/global/networks/library-vpc",
            "params": [],
            "priority": 1000,
            "project": "kkgcplabs01-001",
            "self_link": "https://www.googleapis.com/compute/v1/projects/kkgcplabs01-001/global/firewalls/library-vpc-allow-internal-all",
            "source_ranges": [
              "10.0.1.0/24"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 1,
          "identity": {
            "name": "library-vpc-allow-internal-all",
            "project": "kkgcplabs01-001"
          },
          "dependencies": [
            "module.network.google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "module": "module.firewall",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_public_traffic",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "9000",
                  "8080",
                  "6443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2026-06-06T04:49:00.788-07:00",
            "deletion_policy": "DELETE",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/kkgcplabs01-001/global/firewalls/library-vpc-allow-public-apps",
            "log_config": [],
            "name": "library-vpc-allow-public-apps",
            "network": "https://www.googleapis.com/compute/v1/projects/kkgcplabs01-001/global/networks/library-vpc",
            "params": [],
            "priority": 1000,
            "project": "kkgcplabs01-001",
            "self_link": "https://www.googleapis.com/compute/v1/projects/kkgcplabs01-001/global/firewalls/library-vpc-allow-public-apps",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 1,
          "identity": {
            "name": "library-vpc-allow-public-apps",
            "project": "kkgcplabs01-001"
          },
          "dependencies": [
            "module.network.google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "module": "module.firewall",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2026-06-06T04:49:01.980-07:00",
            "deletion_policy": "DELETE",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/kkgcplabs01-001/global/firewalls/library-vpc-allow-ssh",
            "log_config": [],
            "name": "library-vpc-allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/kkgcplabs01-001/global/networks/library-vpc",
            "params": [],
            "priority": 1000,
            "project": "kkgcplabs01-001",
            "self_link": "https://www.googleapis.com/compute/v1/projects/kkgcplabs01-001/global/firewalls/library-vpc-allow-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 1,
          "identity": {
            "name": "library-vpc-allow-ssh",
            "project": "kkgcplabs01-001"
          },
          "dependencies": [
            "module.network.google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "bgp_always_compare_med": false,
            "bgp_best_path_selection_mode": "LEGACY",
            "delete_bgp_always_compare_med": false,
            "delete_default_routes_on_create": false,
            "deletion_policy": "DELETE",
            "enable_ula_internal_ipv6": false,
            "id": "projects/kkgcplabs01-001/global/networks/library-vpc",
            "mtu": 0,
            "name": "library-vpc",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "network_id": "7251532471023024078",
            "numeric_id": "7251532471023024078",
            "project": "kkgcplabs01-001",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/kkgcplabs01-001/global/networks/library-vpc"
          },
          "identity_schema_version": 1,
          "identity": {
            "name": "library-vpc",
            "project": "kkgcplabs01-001"
          }
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_router",
      "name": "router",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2026-06-06T04:49:14.648-07:00",
            "deletion_policy": "DELETE",
            "encrypted_interconnect_router": false,
            "id": "projects/kkgcplabs01-001/regions/us-central1/routers/library-vpc-router",
            "name": "library-vpc-router",
            "network": "https://www.googleapis.com/compute/v1/projects/kkgcplabs01-001/global/networks/library-vpc",
            "project": "kkgcplabs01-001",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/kkgcplabs01-001/regions/us-central1/routers/library-vpc-router"
          },
          "identity_schema_version": 1,
          "identity": {
            "name": "library-vpc-router",
            "project": "kkgcplabs01-001",
            "region": "us-central1"
          },
          "dependencies": [
            "module.network.google_compute_network.vpc_network",
            "module.network.google_compute_subnetwork.subnet"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_router_nat",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "deletion_policy": "DELETE",
            "enable_dynamic_port_allocation": false,
            "enable_endpoint_independent_mapping": false,
            "endpoint_types": [
              "ENDPOINT_TYPE_VM"
            ],
            "icmp_idle_timeout_sec": 30,
            "id": "kkgcplabs01-001/us-central1/library-vpc-router/library-vpc-nat",
            "max_ports_per_vm": 0,
            "min_ports_per_vm": 0,
            "name": "library-vpc-nat",
            "nat_ip_allocate_option": "AUTO_ONLY",
            "project": "kkgcplabs01-001",
            "region": "us-central1",
            "router": "library-vpc-router",
            "source_subnetwork_ip_ranges_to_nat": "ALL_SUBNETWORKS_ALL_IP_RANGES",
            "tcp_established_idle_timeout_sec": 1200,
            "tcp_time_wait_timeout_sec": 120,
            "tcp_transitory_idle_timeout_sec": 30,
            "type": "PUBLIC",
            "udp_idle_timeout_sec": 30
          },
          "identity_schema_version": 1,
          "identity": {
            "name": "library-vpc-nat",
            "project": "kkgcplabs01-001",
            "region": "us-central1",
            "router": "library-vpc-router"
          },
          "dependencies": [
            "module.network.google_compute_network.vpc_network",
            "module.network.google_compute_router.router",
            "module.network.google_compute_subnetwork.subnet"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_subnet_cidr_routes_overlap": false,
            "creation_timestamp": "2026-06-06T04:49:01.342-07:00",
            "deletion_policy": "DELETE",
            "gateway_address": "10.0.1.1",
            "id": "projects/kkgcplabs01-001/regions/us-central1/subnetworks/library-vpc-subnet",
            "ip_cidr_range": "10.0.1.0/24",
            "name": "library-vpc-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/kkgcplabs01-001/global/networks/library-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "kkgcplabs01-001",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/kkgcplabs01-001/regions/us-central1/subnetworks/library-vpc-subnet",
            "stack_type": "IPV4_ONLY",
            "subnetwork_id": 2186153547992250306
          },
          "identity_schema_version": 1,
          "identity": {
            "name": "library-vpc-subnet",
            "project": "kkgcplabs01-001",
            "region": "us-central1"
          },
          "dependencies": [
            "module.network.google_compute_network.vpc_network"
          ]
        }
      ]
    }
  ]
}